fix style on mobile

--- a/web/app/globals.css
+++ b/web/app/globals.css
@@ -57,6 +57,6 @@ header {
 
 @media (max-width: 768px) {
   body {
-    padding: 0;
+    padding-inline: 0;
   }
 }
